--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 </head>
 <body>
 
-  <header>🎬 Nutted Streaming</header>
+  <header>Oh She's Having Her Way</header>
 
   <div class="container">
     <video controls autoplay>
